2005-11-07  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/jacl/tcl/lang/ForeachCmd.java (cmdProc):
        Remove unused var lookup code.
	* src/jacl/tcl/lang/IfCmd.java (cmdProc):
        Check for extra words after the else block
        and generate an error if found.
	* tests/tcl/foreach.test:
	* tests/tcl/if.test:
	* tests/tcl/while-old.test:
	* tests/tcl/while.test: Update test to
        those found in Tcl 8.4.

2005-11-06  Mo DeJong  <mdejong@users.sourceforge.net>

	* src/itcl/itcl/lang/Cmds.java: Don't pass
        -url to source of a resource.
	* src/jacl/tcl/lang/FileCmd.java: Add debug
        statement.
	* src/jacl/tcl/lang/FileUtil.java: Fixup
        broken use of StringBuffer, keep file path
        from being munged with more than one character
        appears before a colon.
	* src/jacl/tcl/lang/FormatCmd.java: Fixup
        broken StringBuffer usage.
	* src/jacl/tcl/lang/Interp.java (createCommands,
        evalResource):
        Remove -url arguent to source of a resource.
        Set the script name returned by info script
        when sourcing a resource.
	* src/jacl/tcl/lang/SourceCmd.java: If a
        filename starts with "resource:" then
        always treat it as a resource. The previous
        code would only treat it as a resource if the
        -url flag was also passed.
	* src/jacl/tcl/lang/library/init.tcl:
        Remove -url arguent to source of a resource.
	* tests/jacl/FileCmd.test: Test for filename
        bug that was keeping resource: prefixed
        names from being dealt properly with the file
        commands.
	* tests/jacl/Interp.test:
        Remove -url arguent to source of a resource.

2005-11-04  Mo DeJong  <mdejong@users.sourceforge.net>

	* Makefile.in: Copy files into library directory
        without extra files and CVS dirs. Don't cd to
        tests directory in source tree before running tests.
	* jaclsh.bat.in:
	* jaclsh.in: Check for JACL_MAIN env var when